Fixed an unstable content size on visibility change of a vertical scrollbar

--- a/useScroll/useScroll.module.less
+++ b/useScroll/useScroll.module.less
@@ -56,6 +56,11 @@
 		}
 	}
 
+	.scrollContentWrapper {
+		width: 100%;
+		height: 100%;
+	}
+
 	.scrollContent {
 		box-sizing: border-box;
 
